--- a/notebooks/Ch04_Feature_Engineering_and_Selection/Bonus - Classifying handwritten digits using Deep CNNs.ipynb
+++ b/notebooks/Ch04_Feature_Engineering_and_Selection/Bonus - Classifying handwritten digits using Deep CNNs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,8 @@
     "# (x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
     "\n",
     "import numpy as np\n",
+    "\n",
+    "path = \"./datasets/mnist.npz\"\n",
     "with np.load(path, allow_pickle=True) as f:\n",
     "    x_train, y_train = f['x_train'], f['y_train']\n",
     "    x_test, y_test = f['x_test'], f['y_test']"
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -159,9 +161,9 @@
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1.33333 1.33333) rotate(0) translate(4 715)\">\n",
        "<title>G</title>\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-715 283,-715 283,4 -4,4\"/>\n",
-       "<!-- 1578163462208 -->\n",
+       "<!-- 2587441513808 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>1578163462208</title>\n",
+       "<title>2587441513808</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"4,-664.5 4,-710.5 275,-710.5 275,-664.5 4,-664.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"51\" y=\"-695.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">conv2d_input</text>\n",
        "<polyline fill=\"none\" stroke=\"black\" points=\"4,-687.5 98,-687.5\"/>\n",
@@ -175,9 +177,9 @@
        "<polyline fill=\"none\" stroke=\"black\" points=\"154,-687.5 275,-687.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"214.5\" y=\"-672.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">[(None, 28, 28, 1)]</text>\n",
        "</g>\n",
-       "<!-- 1578163462352 -->\n",
+       "<!-- 2587441208192 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>1578163462352</title>\n",
+       "<title>2587441208192</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"20,-581.5 20,-627.5 259,-627.5 259,-581.5 20,-581.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"52\" y=\"-612.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">conv2d</text>\n",
        "<polyline fill=\"none\" stroke=\"black\" points=\"20,-604.5 84,-604.5\"/>\n",
@@ -191,15 +193,15 @@
        "<polyline fill=\"none\" stroke=\"black\" points=\"140,-604.5 259,-604.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"199.5\" y=\"-589.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">(None, 26, 26, 32)</text>\n",
        "</g>\n",
-       "<!-- 1578163462208&#45;&gt;1578163462352 -->\n",
+       "<!-- 2587441513808&#45;&gt;2587441208192 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>1578163462208-&gt;1578163462352</title>\n",
+       "<title>2587441513808-&gt;2587441208192</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M139.5,-664.79C139.5,-656.71 139.5,-647.35 139.5,-638.48\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"143,-638.78 139.5,-628.78 136,-638.78 143,-638.78\"/>\n",
        "</g>\n",
-       "<!-- 1576695240880 -->\n",
+       "<!-- 2587441258016 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>1576695240880</title>\n",
+       "<title>2587441258016</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"15.5,-498.5 15.5,-544.5 263.5,-544.5 263.5,-498.5 15.5,-498.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"52\" y=\"-529.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">conv2d_1</text>\n",
        "<polyline fill=\"none\" stroke=\"black\" points=\"15.5,-521.5 88.5,-521.5\"/>\n",
@@ -213,15 +215,15 @@
        "<polyline fill=\"none\" stroke=\"black\" points=\"144.5,-521.5 263.5,-521.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"204\" y=\"-506.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">(None, 24, 24, 64)</text>\n",
        "</g>\n",
-       "<!-- 1578163462352&#45;&gt;1576695240880 -->\n",
+       "<!-- 2587441208192&#45;&gt;2587441258016 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>1578163462352-&gt;1576695240880</title>\n",
+       "<title>2587441208192-&gt;2587441258016</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M139.5,-581.79C139.5,-573.71 139.5,-564.35 139.5,-555.48\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"143,-555.78 139.5,-545.78 136,-555.78 143,-555.78\"/>\n",
        "</g>\n",
-       "<!-- 1576696782512 -->\n",
+       "<!-- 2587422711280 -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>1576696782512</title>\n",
+       "<title>2587422711280</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"0,-415.5 0,-461.5 279,-461.5 279,-415.5 0,-415.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"52\" y=\"-446.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">max_pooling2d</text>\n",
        "<polyline fill=\"none\" stroke=\"black\" points=\"0,-438.5 104,-438.5\"/>\n",
@@ -235,15 +237,15 @@
        "<polyline fill=\"none\" stroke=\"black\" points=\"160,-438.5 279,-438.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"219.5\" y=\"-423.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">(None, 12, 12, 64)</text>\n",
        "</g>\n",
-       "<!-- 1576695240880&#45;&gt;1576696782512 -->\n",
+       "<!-- 2587441258016&#45;&gt;2587422711280 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>1576695240880-&gt;1576696782512</title>\n",
+       "<title>2587441258016-&gt;2587422711280</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M139.5,-498.79C139.5,-490.71 139.5,-481.35 139.5,-472.48\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"143,-472.78 139.5,-462.78 136,-472.78 143,-472.78\"/>\n",
        "</g>\n",
-       "<!-- 1576695239872 -->\n",
+       "<!-- 2587439982192 -->\n",
        "<g id=\"node5\" class=\"node\">\n",
-       "<title>1576695239872</title>\n",
+       "<title>2587439982192</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"20,-332.5 20,-378.5 259,-378.5 259,-332.5 20,-332.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"52\" y=\"-363.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">dropout</text>\n",
        "<polyline fill=\"none\" stroke=\"black\" points=\"20,-355.5 84,-355.5\"/>\n",
@@ -257,15 +259,15 @@
        "<polyline fill=\"none\" stroke=\"black\" points=\"140,-355.5 259,-355.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"199.5\" y=\"-340.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">(None, 12, 12, 64)</text>\n",
        "</g>\n",
-       "<!-- 1576696782512&#45;&gt;1576695239872 -->\n",
+       "<!-- 2587422711280&#45;&gt;2587439982192 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>1576696782512-&gt;1576695239872</title>\n",
+       "<title>2587422711280-&gt;2587439982192</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M139.5,-415.79C139.5,-407.71 139.5,-398.35 139.5,-389.48\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"143,-389.78 139.5,-379.78 136,-389.78 143,-389.78\"/>\n",
        "</g>\n",
-       "<!-- 1576696782656 -->\n",
+       "<!-- 2587422711424 -->\n",
        "<g id=\"node6\" class=\"node\">\n",
-       "<title>1576696782656</title>\n",
+       "<title>2587422711424</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"25,-249.5 25,-295.5 254,-295.5 254,-249.5 25,-249.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"52\" y=\"-280.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">flatten</text>\n",
        "<polyline fill=\"none\" stroke=\"black\" points=\"25,-272.5 79,-272.5\"/>\n",
@@ -279,15 +281,15 @@
        "<polyline fill=\"none\" stroke=\"black\" points=\"135,-272.5 254,-272.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"194.5\" y=\"-257.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">(None, 9216)</text>\n",
        "</g>\n",
-       "<!-- 1576695239872&#45;&gt;1576696782656 -->\n",
+       "<!-- 2587439982192&#45;&gt;2587422711424 -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>1576695239872-&gt;1576696782656</title>\n",
+       "<title>2587439982192-&gt;2587422711424</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M139.5,-332.79C139.5,-324.71 139.5,-315.35 139.5,-306.48\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"143,-306.78 139.5,-296.78 136,-306.78 143,-306.78\"/>\n",
        "</g>\n",
-       "<!-- 1576700167504 -->\n",
+       "<!-- 2587423135200 -->\n",
        "<g id=\"node7\" class=\"node\">\n",
-       "<title>1576700167504</title>\n",
+       "<title>2587423135200</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"41,-166.5 41,-212.5 238,-212.5 238,-166.5 41,-166.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"66.5\" y=\"-197.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">dense</text>\n",
        "<polyline fill=\"none\" stroke=\"black\" points=\"41,-189.5 92,-189.5\"/>\n",
@@ -301,15 +303,15 @@
        "<polyline fill=\"none\" stroke=\"black\" points=\"148,-189.5 238,-189.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"193\" y=\"-174.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">(None, 128)</text>\n",
        "</g>\n",
-       "<!-- 1576696782656&#45;&gt;1576700167504 -->\n",
+       "<!-- 2587422711424&#45;&gt;2587423135200 -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
-       "<title>1576696782656-&gt;1576700167504</title>\n",
+       "<title>2587422711424-&gt;2587423135200</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M139.5,-249.79C139.5,-241.71 139.5,-232.35 139.5,-223.48\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"143,-223.78 139.5,-213.78 136,-223.78 143,-223.78\"/>\n",
        "</g>\n",
-       "<!-- 1576700189568 -->\n",
+       "<!-- 2587440398688 -->\n",
        "<g id=\"node8\" class=\"node\">\n",
-       "<title>1576700189568</title>\n",
+       "<title>2587440398688</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"32,-83.5 32,-129.5 247,-129.5 247,-83.5 32,-83.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"70\" y=\"-114.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">dropout_1</text>\n",
        "<polyline fill=\"none\" stroke=\"black\" points=\"32,-106.5 108,-106.5\"/>\n",
@@ -323,15 +325,15 @@
        "<polyline fill=\"none\" stroke=\"black\" points=\"164,-106.5 247,-106.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"205.5\" y=\"-91.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">(None, 128)</text>\n",
        "</g>\n",
-       "<!-- 1576700167504&#45;&gt;1576700189568 -->\n",
+       "<!-- 2587423135200&#45;&gt;2587440398688 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>1576700167504-&gt;1576700189568</title>\n",
+       "<title>2587423135200-&gt;2587440398688</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M139.5,-166.79C139.5,-158.71 139.5,-149.35 139.5,-140.48\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"143,-140.78 139.5,-130.78 136,-140.78 143,-140.78\"/>\n",
        "</g>\n",
-       "<!-- 1576700188992 -->\n",
+       "<!-- 2587440399456 -->\n",
        "<g id=\"node9\" class=\"node\">\n",
-       "<title>1576700188992</title>\n",
+       "<title>2587440399456</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"38.5,-0.5 38.5,-46.5 240.5,-46.5 240.5,-0.5 38.5,-0.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"70\" y=\"-31.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">dense_1</text>\n",
        "<polyline fill=\"none\" stroke=\"black\" points=\"38.5,-23.5 101.5,-23.5\"/>\n",
@@ -345,9 +347,9 @@
        "<polyline fill=\"none\" stroke=\"black\" points=\"157.5,-23.5 240.5,-23.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"199\" y=\"-8.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">(None, 10)</text>\n",
        "</g>\n",
-       "<!-- 1576700189568&#45;&gt;1576700188992 -->\n",
+       "<!-- 2587440398688&#45;&gt;2587440399456 -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
-       "<title>1576700189568-&gt;1576700188992</title>\n",
+       "<title>2587440398688-&gt;2587440399456</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M139.5,-83.79C139.5,-75.71 139.5,-66.35 139.5,-57.48\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"143,-57.78 139.5,-47.78 136,-57.78 143,-57.78\"/>\n",
        "</g>\n",
@@ -358,7 +360,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -403,18 +405,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "469/469 [==============================] - 40s 85ms/step - loss: 2.2939 - accuracy: 0.1216 - val_loss: 2.2737 - val_accuracy: 0.1788\n",
+      "469/469 [==============================] - 43s 91ms/step - loss: 2.2948 - accuracy: 0.1303 - val_loss: 2.2717 - val_accuracy: 0.2099\n",
       "Epoch 2/2\n",
-      "469/469 [==============================] - 40s 86ms/step - loss: 2.2622 - accuracy: 0.1794 - val_loss: 2.2363 - val_accuracy: 0.2540\n"
+      "469/469 [==============================] - 42s 89ms/step - loss: 2.2572 - accuracy: 0.2045 - val_loss: 2.2267 - val_accuracy: 0.3170\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x16f1ab2d0a0>"
+       "<keras.callbacks.History at 0x25a6fe60fd0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -445,7 +447,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 2s 7ms/step - loss: 2.2363 - accuracy: 0.2540\n"
+      "313/313 [==============================] - 2s 7ms/step - loss: 2.2267 - accuracy: 0.3170\n"
      ]
     }
    ],
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -464,8 +466,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 2.2363383769989014\n",
-      "Test accuracy: 0.2540000081062317\n"
+      "Test loss: 2.226673126220703\n",
+      "Test accuracy: 0.31700000166893005\n"
      ]
     }
    ],
