--- a/notebooks/Ch05_Building_Tuning_and_Deploying_Models/Building, Tuning and Deploying Models.ipynb
+++ b/notebooks/Ch05_Building_Tuning_and_Deploying_Models/Building, Tuning and Deploying Models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x218886c6d60>"
+       "<matplotlib.image.AxesImage at 0x239fff46190>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "       [ 0.,  0.,  1., 10., 13.,  3.,  0.,  0.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "       10., 10.,  0.,  0.,  0.,  0.,  1., 10., 13.,  3.,  0.,  0.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -977,27 +977,27 @@
       "[CV] END ......................C=1, gamma=0.0001, kernel=rbf; total time=   0.0s\n",
       "[CV] END ......................C=1, gamma=0.0001, kernel=rbf; total time=   0.0s\n",
       "[CV] END ......................C=1, gamma=0.0001, kernel=rbf; total time=   0.0s\n",
-      "[CV] END ...................C=10, gamma=0.001, kernel=linear; total time=   1.5s\n",
-      "[CV] END ...................C=10, gamma=0.001, kernel=linear; total time=   2.0s\n",
-      "[CV] END ...................C=10, gamma=0.001, kernel=linear; total time=   3.0s\n",
+      "[CV] END ...................C=10, gamma=0.001, kernel=linear; total time=   1.4s\n",
+      "[CV] END ...................C=10, gamma=0.001, kernel=linear; total time=   1.8s\n",
+      "[CV] END ...................C=10, gamma=0.001, kernel=linear; total time=   2.8s\n",
       "[CV] END ......................C=10, gamma=0.001, kernel=rbf; total time=   0.0s\n",
       "[CV] END ......................C=10, gamma=0.001, kernel=rbf; total time=   0.0s\n",
       "[CV] END ......................C=10, gamma=0.001, kernel=rbf; total time=   0.0s\n",
-      "[CV] END ..................C=10, gamma=0.0001, kernel=linear; total time=   1.5s\n",
+      "[CV] END ..................C=10, gamma=0.0001, kernel=linear; total time=   1.4s\n",
       "[CV] END ..................C=10, gamma=0.0001, kernel=linear; total time=   1.8s\n",
-      "[CV] END ..................C=10, gamma=0.0001, kernel=linear; total time=   3.0s\n",
+      "[CV] END ..................C=10, gamma=0.0001, kernel=linear; total time=   2.9s\n",
       "[CV] END .....................C=10, gamma=0.0001, kernel=rbf; total time=   0.0s\n",
       "[CV] END .....................C=10, gamma=0.0001, kernel=rbf; total time=   0.0s\n",
       "[CV] END .....................C=10, gamma=0.0001, kernel=rbf; total time=   0.0s\n",
+      "[CV] END ..................C=100, gamma=0.001, kernel=linear; total time=   9.0s\n",
+      "[CV] END ..................C=100, gamma=0.001, kernel=linear; total time=   2.6s\n",
       "[CV] END ..................C=100, gamma=0.001, kernel=linear; total time=   8.7s\n",
-      "[CV] END ..................C=100, gamma=0.001, kernel=linear; total time=   2.7s\n",
-      "[CV] END ..................C=100, gamma=0.001, kernel=linear; total time=   6.5s\n",
       "[CV] END .....................C=100, gamma=0.001, kernel=rbf; total time=   0.0s\n",
       "[CV] END .....................C=100, gamma=0.001, kernel=rbf; total time=   0.0s\n",
       "[CV] END .....................C=100, gamma=0.001, kernel=rbf; total time=   0.0s\n",
-      "[CV] END .................C=100, gamma=0.0001, kernel=linear; total time=   8.7s\n",
-      "[CV] END .................C=100, gamma=0.0001, kernel=linear; total time=   2.7s\n",
-      "[CV] END .................C=100, gamma=0.0001, kernel=linear; total time=   6.5s\n",
+      "[CV] END .................C=100, gamma=0.0001, kernel=linear; total time=  38.1s\n",
+      "[CV] END .................C=100, gamma=0.0001, kernel=linear; total time=  10.6s\n",
+      "[CV] END .................C=100, gamma=0.0001, kernel=linear; total time=  25.6s\n",
       "[CV] END ....................C=100, gamma=0.0001, kernel=rbf; total time=   0.0s\n",
       "[CV] END ....................C=100, gamma=0.0001, kernel=rbf; total time=   0.0s\n",
       "[CV] END ....................C=100, gamma=0.0001, kernel=rbf; total time=   0.0s\n",
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1101,31 +1101,31 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 5 candidates, totalling 15 fits\n",
-      "[CV] END C=11.424009809392777, gamma=0.04950400513425083, kernel=rbf; total time=   0.0s\n",
-      "[CV] END C=11.424009809392777, gamma=0.04950400513425083, kernel=rbf; total time=   0.0s\n",
-      "[CV] END C=11.424009809392777, gamma=0.04950400513425083, kernel=rbf; total time=   0.0s\n",
-      "[CV] END C=14.573707599415721, gamma=0.046422385247775214, kernel=rbf; total time=   0.0s\n",
-      "[CV] END C=14.573707599415721, gamma=0.046422385247775214, kernel=rbf; total time=   0.0s\n",
-      "[CV] END C=14.573707599415721, gamma=0.046422385247775214, kernel=rbf; total time=   0.0s\n",
-      "[CV] END C=14.868744789179376, gamma=0.05345645010360032, kernel=linear; total time=   3.8s\n",
-      "[CV] END C=14.868744789179376, gamma=0.05345645010360032, kernel=linear; total time=   1.7s\n",
-      "[CV] END C=14.868744789179376, gamma=0.05345645010360032, kernel=linear; total time=   2.2s\n",
-      "[CV] END C=3.4072626028790314, gamma=0.25726671210788016, kernel=linear; total time=   0.6s\n",
-      "[CV] END C=3.4072626028790314, gamma=0.25726671210788016, kernel=linear; total time=   1.1s\n",
-      "[CV] END C=3.4072626028790314, gamma=0.25726671210788016, kernel=linear; total time=   0.5s\n",
-      "[CV] END C=3.5553113381666797, gamma=0.1637299908344767, kernel=rbf; total time=   0.0s\n",
-      "[CV] END C=3.5553113381666797, gamma=0.1637299908344767, kernel=rbf; total time=   0.0s\n",
-      "[CV] END C=3.5553113381666797, gamma=0.1637299908344767, kernel=rbf; total time=   0.0s\n",
+      "[CV] END C=23.135667588013117, gamma=0.2604489359565698, kernel=linear; total time=   2.8s\n",
+      "[CV] END C=23.135667588013117, gamma=0.2604489359565698, kernel=linear; total time=   8.6s\n",
+      "[CV] END C=23.135667588013117, gamma=0.2604489359565698, kernel=linear; total time=   5.0s\n",
+      "[CV] END C=6.478079444028518, gamma=0.14563469607930948, kernel=linear; total time=   0.8s\n",
+      "[CV] END C=6.478079444028518, gamma=0.14563469607930948, kernel=linear; total time=   1.8s\n",
+      "[CV] END C=6.478079444028518, gamma=0.14563469607930948, kernel=linear; total time=   0.7s\n",
+      "[CV] END C=3.878088453842285, gamma=0.05864780040012864, kernel=linear; total time=   0.5s\n",
+      "[CV] END C=3.878088453842285, gamma=0.05864780040012864, kernel=linear; total time=   1.1s\n",
+      "[CV] END C=3.878088453842285, gamma=0.05864780040012864, kernel=linear; total time=   1.6s\n",
+      "[CV] END C=6.365931956654195, gamma=0.10166562088119671, kernel=linear; total time=   2.4s\n",
+      "[CV] END C=6.365931956654195, gamma=0.10166562088119671, kernel=linear; total time=   1.4s\n",
+      "[CV] END C=6.365931956654195, gamma=0.10166562088119671, kernel=linear; total time=   1.0s\n",
+      "[CV] END C=6.018131883757371, gamma=0.13951178736829814, kernel=linear; total time=   2.1s\n",
+      "[CV] END C=6.018131883757371, gamma=0.13951178736829814, kernel=linear; total time=   1.2s\n",
+      "[CV] END C=6.018131883757371, gamma=0.13951178736829814, kernel=linear; total time=   1.1s\n",
       "Best parameters set found on development set:\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'C': 14.868744789179376, 'gamma': 0.05345645010360032, 'kernel': 'linear'}"
+       "{'C': 23.135667588013117, 'gamma': 0.2604489359565698, 'kernel': 'linear'}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,17 +1155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9649\n",
-      "Precision: 0.9649\n",
-      "Recall: 0.9649\n",
-      "F1 Score: 0.9649\n"
+      "Accuracy: 0.9532\n",
+      "Precision: 0.9532\n",
+      "Recall: 0.9532\n",
+      "F1 Score: 0.9532\n"
      ]
     }
    ],
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
        "['lr_model.pkl']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
