--- a/notebooks/Ch04_Feature_Engineering_and_Selection/Feature Engineering on Categorical Data.ipynb
+++ b/notebooks/Ch04_Feature_Engineering_and_Selection/Feature Engineering on Categorical Data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +124,7 @@
        "6     New Super Mario Bros.       DS  2006.0      Platform  Nintendo"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +149,7 @@
        "       'Strategy'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
        " 11: 'Strategy'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -295,7 +295,7 @@
        "6     New Super Mario Bros.       DS  2006.0      Platform           4"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -325,7 +325,7 @@
        "array(['Gen 1', 'Gen 2', 'Gen 3', 'Gen 4', 'Gen 5', 'Gen 6'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -421,7 +421,7 @@
        "9               Swanna      Gen 5                5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -532,7 +532,7 @@
        "9               Swanna      Gen 5      False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -639,7 +639,7 @@
        "9               Swanna      Gen 5          4      False           0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -844,7 +844,7 @@
        "9    1.0    0.0      False           0              1.0             0.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -912,7 +912,7 @@
        "1  CharMyToast      Gen 4      False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -986,7 +986,7 @@
        "1  CharMyToast      Gen 4          3      False           0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -1091,7 +1091,7 @@
        "1    0.0      False           0              1.0             0.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -1228,7 +1228,7 @@
        "9               Swanna      Gen 5  False  False  False  False   True  False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -1357,7 +1357,7 @@
        "9               Swanna      Gen 5  False  False  False   True  False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -1479,7 +1479,7 @@
        "9               Swanna      Gen 5  False  False  False  False   True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -1609,7 +1609,7 @@
        "9               Swanna      Gen 5  False  False  False  False   True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,6 +1622,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16598, 12)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vg_df.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1630,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -1653,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1683,7 @@
        "       [ 0.,  0.,  0., -2., -5.,  0.,  0.,  0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1709,7 @@
        "       [ 0., -1.,  0.,  0.,  0.,  0.,  0.,  1.]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1703,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1723,7 +1743,7 @@
        " ['Strategy']]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1736,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1746,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -1768,7 +1788,7 @@
        "       [ 0., -1.,  0.,  0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1804,7 +1824,7 @@
        " 'Strategy': array([ 0., -1.,  0.,  0.,  0.,  0.])}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1816,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1856,7 @@
        "Name: Genre_hashed, Length: 16598, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1848,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1999,7 @@
        "[16598 rows x 3 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -2004,7 +2024,7 @@
        " 'n_features': 6}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
